--- a/website/templates/linkpage.html
+++ b/website/templates/linkpage.html
@@ -4,7 +4,7 @@ Link page
 {%endblock%}
 {%block content%}
 
-<form action="/generate" method="post">
+<form action="/generate">
 <h4>Enter your link:</h4>
 <div class="urldiv">
 <input name="url" type="url" id="url"placeholder="Link" class="url">
